<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignUpFragment">

    <EditText
        android:id="@+id/firstNameEt"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/firstname"
        android:inputType="textPersonName"

        />
    <EditText
        android:id="@+id/secondNameEt"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameEt"
        android:hint="@string/lastname"

        android:inputType="textPersonName"/>
    
    <EditText
        android:id="@+id/emailIdEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondNameEt"
        android:hint="@string/xyz_gmail_com"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/passWordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailIdEt"
        android:hint="@string/yatish_1910"
        android:inputType="textPassword"

        />

    <EditText
        android:id="@+id/phoneNumberEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passWordEt"
        android:hint="@string/_7879123454"
        android:inputType="phone"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberEt"
        app:cornerRadius="5dp"
        android:textAllCaps="true"
        android:text="@string/sign_up"
        />
    <ProgressBar
        android:id="@+id/signUpPb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/alreadyUserTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/submitBt"

        app:layout_constraintTop_toBottomOf="@id/submitBt"
        android:text="@string/already_an_user"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/submitBt"
        app:layout_constraintStart_toEndOf="@id/alreadyUserTv"
        app:layout_constraintTop_toBottomOf="@id/submitBt"
        android:text="@string/sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>